# ferris_chats

./: Cargo.toml
ferris_chats_client/: Cargo.toml
ferris_chats_client/src/: client.rs  main.rs  ui.rs
ferris_chats_data/: Cargo.toml  readme.md
ferris_chats_data/src/: lib.rs
ferris_chats_server/: Cargo.toml  readme.md
ferris_chats_server/src/: main.rs  server.rs
src/: lib.rs  main.rs  mods.rs
src/mods/: client.rs  data.rs  server.rs  ui.rs
