[package]
name = "ferris_chats"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version =  "1.42.0", features = ["rt-multi-thread"] }
axum = { version = "0.8.0-rc.1", features = ["macros"] }
serde = { version = "1.0.216", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"]}
axum-server = "*"
dirs = "5.0.1"
serde_json = "1.0.134"
ctrlc = "*"