[package]
name = "ferris_chats_data"
version = "0.1.0"
edition = "2021"
description = "This library provides data structures for ferris_chat."
license = "GPL-3"
repository = "https://github.com/TuxMC-sys/ferris_chats/"
categories = ["web-programming::http-server", "asynchronous","development-tools"]
keywords = ["chatting", "DSA"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
