[package]
name = "ferris_chats_server"
version = "0.1.1"
edition = "2021"
description = "This binary provides a server for ferris_chat."
license = "GPL-3.0"
repository = "https://github.com/TuxMC-sys/ferris_chats/"
categories = ["web-programming::http-server", "asynchronous", "command-line-utilities", "concurrency"]
keywords = ["chatting", "server"]

[dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
chrono = "0.4.39"
ctrlc = "3.4.5"
ferris_chats_data = "0.1.*"
